--- a/style.css
+++ b/style.css
@@ -1,19 +1,4 @@
 
-#toggleMenu:checked ~ div.wrapper {
-  margin-left: 10em;
-}
-#toggleLabel::before{
-  color: white;
-  content: "\2630";
-}
-#toggleMenu:checked ~ div.wrapper #toggleLabel::before{
-content: "\2716";
-}
-#toggleLabel{
-  font-size: 2em;
-  font-weight: 900;
-}
-
 body{
   padding-bottom: 0px;
   margin: 0;
@@ -24,10 +9,9 @@ body{
 .wrapper{
   background-color: #221f1f;
   height: 100%;
-  transition: margin-left .2s ease-out;
 }
 img.modalButton:hover{
-  transform: scale(1.5);
+  transform: scale(1.1);
   box-shadow: .5em .5em 2em rgba(0,0,0,0.7);
 }
 img.modalButton{
@@ -85,11 +69,12 @@ img{
   transform: translate(-50%, -50%);
   max-height: 50%;
   max-width: 80%;
-  padding: 1em;
+  padding-left: 1em;
+  padding-top: 2em;
   border-radius: 1em;
   background-color: #fff;
   align-self: center;
-  animation: modalKey 1s forwards;
+  animation: modalKey 0.5s forwards;
 }
 @keyframes modalKey {
   0% {max-width: 30%; max-height: 15%;}
@@ -101,15 +86,19 @@ img{
   width: 80%;
 }
 .closeButton{
-  position: relative;
-  left: 94%;
+  justify-content: center;
+  text-align: center;
+  font-size: 2em;
   border-style: none;
   border-radius: 10px;
   background: rgb(202, 60, 60);
   color: white;
   grid-column: 3;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
+  margin-left: calc(100% - 70px);
+  margin-top: -0.5em;
+  position: absolute;
 }
 .modalContent{
   margin-left: 15px;
